--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@unleash/proxy-client-react": "^4.1.2",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "monaco-editor": "^0.54.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.22.3",
