--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@data-driven-forms/pf4-component-mapper": "^4.1.1",
     "@data-driven-forms/react-form-renderer": "^4.1.1",
+    "@monaco-editor/react": "^4.7.0",
     "@patternfly/quickstarts": "^6.2.2",
     "@patternfly/react-core": "^6.2.2",
     "@patternfly/react-table": "^6.2.2",
