RHCLOUD-41924: Externalize caddy config data (#214)
Changes to stabilize tests (tolerant of minor changes to item counts)
Externalizes caddy configuration data to configmaps in the konflux-release-data

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "patch:hosts": "fec patch-etc-hosts",
     "start": "fec dev-proxy",
     "static": "fec static",
-    "test": "TZ=UTC jest --verbose --no-cache --passWithNoTests",
     "verify": "npm-run-all build lint test",
     "postinstall": "ts-patch install"
   },
@@ -41,6 +40,7 @@
     "yaml": "^2.8.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@redhat-cloud-services/eslint-config-redhat-cloud-services": "^2.0.12",
     "@redhat-cloud-services/frontend-components-config": "^6.7.4",
     "@redhat-cloud-services/tsc-transform-imports": "^1.0.26",
