--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "monaco-editor": "^0.55.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-intl": "^6.6.2",
     "react-router-dom": "^6.30.2",
     "yaml": "^2.8.1"
   },
