--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@unleash/proxy-client-react": "^4.5.2",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
+    "fuse.js": "^7.1.0",
     "monaco-editor": "^0.55.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
