--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "npm-run-all2": "5.0.2",
     "ts-jest": "^29.4.5",
+    "uuid": "^9.0.1",
     "ts-patch": "^3.3.0",
     "typescript": "^5.9.3",
     "webpack-bundle-analyzer": "4.10.2"
